--- a/datafiles/lang/zh-TW.json
+++ b/datafiles/lang/zh-TW.json
@@ -2,157 +2,195 @@
   "lang": "zh-tw",
   "title": "繁體中文",
   "content": {
-    "title_new_project": "創建項目",
+    "title_new_project": "專案建立",
     "title_start_page": "開始頁面",
-    "title_about": "关于",
-    "button_about": "关于",
-    "button_project_create": "新建項目",
-    "button_project_open": "打開已有項目",
+    "title_about": "關於",
+    "button_about": "關於",
+    "button_project_create": "新建專案",
+    "button_project_open": "開啟已有專案",
     "button_goback": "返回上一頁",
-    "button_project_create_confirm": "創建項目",
-    "input_music_file": "音樂文件 *",
-    "input_bg_file": "背景文件",
-    "input_chart_file": "導入譜面文件",
+    "button_project_create_confirm": "建立專案",
+    "input_music_file": "音樂檔案 *",
+    "input_bg_file": "背景檔案",
+    "input_chart_file": "匯入譜面檔案",
     "input_leftType": "左側下落類型",
     "input_rightType": "右側下落類型",
     "input_difficulty": "譜面難度",
     "input_title": "譜面標題",
     "input_title_desc": "請輸入譜面標題",
-    "FMOD_load_err": "FMOD 未能正確加載。所有音樂相關功能將無法正常運作。請檢查文件完整性。",
-    "FMOD_create_sys_err": "FMOD 創建系統失敗。\n 錯誤信息: ",
-    "autosave_complete": "自動保存項目完畢。",
-    "autosave_enable": "自動保存已開啟。",
-    "autosave_disable": "自動保存已關閉。",
-    "screenshot_save": "已保存截圖到:",
-    "autoupdate_warn": "未收取到 DyNode 的任何正式版本。",
-    "autoupdate_err": "更新檢查錯誤。請檢查與 Github 頁面的網絡連通性。",
-    "autoupdate_found_1": "收取到新版本 DyNode: ",
-    "autoupdate_found_2": "前往更新頁面",
-    "anno_project_load_complete": "打開項目完畢。",
-    "anno_project_save_complete": "項目保存完畢。",
-    "anno_project_save_failed": "項目保存失敗。",
+    "FMOD_load_err": "FMOD 未能正確載入。所有音樂相關功能將無法正常運作。請檢查檔案完整性。",
+    "FMOD_create_sys_err": "FMOD 系統建立失敗。\n錯誤資訊：",
+    "autosave_complete": "自動保存專案完成。專案檔案已備份。",
+    "autosave_ineffective": "自動保存未生效。請至少手動保存一次專案以啟用自動保存功能。",
+    "autosave_enable": "自動保存已啟用。",
+    "autosave_disable": "自動保存已停用。",
+    "screenshot_save": "已將螢幕截圖保存至：",
+    "autoupdate_warn": "未收到任何正式版本的 DyNode。",
+    "autoupdate_err": "更新檢查發生錯誤。請檢查與 Github 頁面的連線狀況。",
+    "autoupdate_found_1": "發現新版本 DyNode：",
+    "autoupdate_found_2": "前往發佈頁面",
+    "autoupdate_found_3": "更新",
+    "autoupdate_found_4": "跳過此版本",
+    "autoupdate_found_5": "關閉更新提示",
+    "autoupdate_skip": "已跳過該版本的更新提示。",
+    "autoupdate_remove": "已關閉更新提示。你可在 config.json 中重新啟用該提示。",
+    "autoupdate_process_1": "開始進行更新。",
+    "autoupdate_process_2": "開始取得更新檔案。",
+    "autoupdate_process_3": "從主要來源取得更新檔失敗。開始嘗試從備用來源取得更新檔。",
+    "autoupdate_process_4": "更新已準備就緒。稍後可關閉 DyNode 以繼續進行更新。",
+    "autoupdate_process_err_1": "下載過程中發生錯誤。更新已中止。",
+    "autoupdate_process_err_2": "解壓更新檔時發生錯誤。更新已中止。",
+    "anno_project_load_complete": "開啟專案完成。",
+    "anno_project_save_complete": "專案保存完成。",
+    "anno_project_save_failed": "專案保存失敗。",
     "anno_prefix_warn": "警告",
     "anno_prefix_err": "錯誤",
-    "anno_adjust_enabled": "開啟",
-    "anno_adjust_disabled": "關閉",
-    "anno_debug_info": "調試信息",
-    "anno_show_bar": "以 Bar 代替 Time 顯示",
-    "anno_show_bar_warn": "你還未設置全局 Bar Per Minute 與 Offset 。無法切換 Bar/Time 顯示。\n使用 F6 即可進行設置。",
-    "anno_hide_scoreboard": "編輯模式下隱藏分數顯示",
-    "anno_particles_effect": "粒狀效果",
+    "anno_adjust_enabled": "已開啟",
+    "anno_adjust_disabled": "已關閉",
+    "anno_debug_info": "除錯資訊",
+    "anno_show_bar": "以小節數顯示代替時間",
+    "anno_show_bar_warn": "你尚未設定全域 Bar Per Minute 與 Offset。無法切換 Bar/時間顯示。\n使用 F6 進行設定。",
+    "anno_hide_scoreboard": "在編輯模式下隱藏分數顯示",
+    "anno_particles_effect": "粒子效果",
     "anno_hitsound": "打擊音",
-    "anno_switch_sidetype": "切換側麵類型至: ",
-    "anno_switch_sidetype_warn": "你只有正在編輯側面才可以切換側麵類型。",
-    "anno_fade_other_notes": "透明化非編輯側音符",
+    "anno_switch_sidetype": "切換側面類型至：",
+    "anno_switch_sidetype_warn": "僅在編輯該側面時才能切換其側面類型。",
+    "anno_fade_other_notes": "使非編輯側的音符透明化",
     "anno_music_speed": "音樂倍速",
-    "anno_note_speed": "下落速度",
-    "anno_note_speed_warn": "你現在的下落速度為: x0.2。過低的下落速度可能導致嚴重的性能問題。",
-    "anno_switch_theme_to": "已切換到主題",
-    "anno_export_complete": "譜面導出完畢。",
-    "anno_export_failed": "譜面導出失敗。",
-    "anno_music_load_complete": "音樂加載完畢。",
-    "old_version_warn_1": "檢測到來自特定舊版本的項目。\n該譜面是否使用了從 .osu 中導入校時信息並添加了 64ms 的延遲？\n這個延遲在新的版本中建議被撤銷。如果你選擇“是”，則所有放置的 Note 和 Timing Point 都會被提前 64ms 。\n在調整之前我們建議你先對 .dyn 文件進行備份。你也可以在之後手動進行調整。\n這個警告不會出現第二遍。",
-    "new_project_warn": "確定要創建新的工程嗎？所有未保存的更改都將丟失。",
-    "box_add_offset": "請輸入你想要添加的全局時間偏移量（以毫秒記，正數代表增加延遲）。這將會影響所有的 Timing Points 和 Notes 所在的時間。",
-    "anno_add_offset": "谱面音符时间偏移添加：$0 ms",
-    "box_set_global_bar_1": "全局時間偏移添加完畢。",
-    "box_set_global_bar_2": "請輸入用於 Bar 顯示與導出的全局 Offset （毫秒）",
-    "anno_set_global_bar_complete": "已更改全局 BarPM 與 Offset 至",
-    "anno_graph_not_exists": "圖片文件不存在。\n[scale, 0.8]路徑: ",
-    "anno_graph_load_err": "圖片文件讀取失敗。圖片可能過大或損壞。",
-    "anno_music_load_err": "音樂文件加載失敗，可能原因為類型不支持或文件損壞。\nFMOD 錯誤信息: ",
-    "anno_import_info_complete": "導入譜面信息完畢。",
+    "anno_note_speed": "音符下落速度",
+    "anno_note_speed_warn": "你現在的下落速度為：x0.2。過低的下落速度可能導致嚴重的效能問題。",
+    "anno_switch_theme_to": "已切換至主題",
+    "anno_export_complete": "譜面匯出完成。",
+    "anno_export_failed": "譜面匯出失敗。",
+    "anno_music_load_complete": "音樂載入完成。",
+    "old_version_warn_1": "偵測到此專案來自特定舊版本。\n該譜面是否曾使用 .osu 匯入校時並增加了 64ms 延遲？\n在新版本中建議移除該延遲。如果你選擇「是」，所有音符與 Timing Point 將提前 64ms。\n建議在調整前先備份 .dyn 檔案。你也可之後手動調整。\n此警告不會再次顯示。",
+    "new_project_warn": "確定要建立新的專案嗎？所有未保存的變更將會遺失。",
+    "box_add_offset": "請輸入你想加入的全域時間偏移量（毫秒，正值代表增加延遲）。這將影響所有 Timing Point 與音符的時間。",
+    "anno_add_offset": "譜面音符時間偏移已增加：$0 ms",
+    "box_set_global_bar_1": "請輸入自訂的全域 Bar Per Minute",
+    "box_set_global_bar_2": "請輸入用於 Bar 顯示與匯出的全域 Offset（毫秒）",
+    "anno_set_global_bar_complete": "已將全域 BarPM 與 Offset 更改為",
+    "anno_graph_not_exists": "圖片檔案不存在。\n[scale, 0.8]路徑：",
+    "anno_graph_load_err": "圖片檔案讀取失敗。可能檔案過大或已損壞。",
+    "anno_music_load_err": "音樂檔載入失敗，可能是不支援的格式或檔案損壞。\nFMOD 錯誤訊息：",
+    "anno_music_not_exists": "音樂檔不存在。\n[scale,0.8]路徑：",
+    "anno_import_info_complete": "譜面資訊匯入完成。",
     "box_set_chart_title": "請輸入新的譜面標題",
-    "box_set_change_default_width": "請輸入你想設置的默認寬度值",
-    "box_set_div": "请输入你想设置的节拍细分 x (1/x)",
-    "box_q_osu_import_objects": "是否導入 .osu 中的物件？ （要進行轉譜嗎？）",
-    "box_q_clear_objects": "是否清除所有原譜面物件？此操作不可撤銷！",
-    "box_q_import_dymm_bpm": "是否導入 Dynamaker Modified 譜面文件中的變 BPM 數據？",
-    "anno_chart_not_exists": "譜面文件不存在。導入中止。",
-    "box_q_import_confirm": "確認導入譜面？所有操作將不可撤銷。",
+    "box_set_change_default_width": "請輸入你想設定的預設寬度值",
+    "box_set_div": "請輸入你想設定的節拍細分 x（1/x）",
+    "box_q_osu_import_objects": "是否匯入 .osu 中的物件？（進行譜面轉換嗎？）",
+    "box_q_clear_objects": "是否清除所有原譜面物件？此操作無法復原！",
+    "box_q_import_dymm_bpm": "是否匯入 Dynamaker Modified 譜面檔案中的變 BPM 資料？",
+    "anno_chart_not_exists": "譜面檔不存在。匯入已中止。",
+    "box_q_import_confirm": "確認匯入譜面？此操作將不可逆。",
     "box_q_import_clear": "是否清除所有原譜面物件？",
-    "box_q_import_timing_reset": "是否清除所有原譜面 Timing 信息？",
-    "box_q_import_info": "是否導入譜面信息（標題、難度等）？",
-    "box_q_import_bpm": "是否導入 Timing 信息（BPM、Offset等）？",
-    "anno_import_chart_complete": "譜面導入完畢。",
-    "confirm_close": "確定要退出嗎？所有未保存的進度將會丟失。",
+    "box_q_import_timing_reset": "是否清除所有原譜面 Timing 資訊？",
+    "box_q_import_info": "是否匯入譜面資訊（標題、難度等）？",
+    "box_q_import_bpm": "是否匯入 Timing 資訊（BPM、Offset 等）？",
+    "anno_import_chart_complete": "譜面匯入完成。",
+    "confirm_close": "確定要退出嗎？所有未保存的進度將會遺失。",
     "anno_editside_switch": "編輯側切換至",
     "editside_down": "正面",
     "editside_left": "左側",
     "editside_right": "右側",
-    "fileformat_chart": "支持的譜面文件",
-    "timing_point_create_with_note_question": "檢測到你已經選擇一個 Note，它的時間是: $0 ms。要以這個時間作為 offset 嗎？",
-    "export_fix_decimal_question": "導出時是否將導出的所有音符時間對毫秒取整？\n使用該功能導出後的譜面將無法在再次導入後正常編輯。",
-    "export_fix_error_question": "是否对导出的谱面进行误差修正？\n该功能将误差在 2 毫秒内的音符对齐。",
-    "export_to_dym_question": "是否導出用於 Dynamaker-modified 的相關信息？使用該選項導出的譜面僅能用於編輯器編輯。\n若選擇“是”，所有已經設置的 Bar 信息將由 DyNode 以默認方式覆寫。",
-    "export_timing_error": "你還沒有配置 Timing ，因此無法導出譜面。",
+    "editside_LR": "雙側",
+    "fileformat_chart": "支援的譜面檔案",
+    "timing_point_create_with_note_question": "偵測到你已選擇一個音符，其時間為：$0 ms。要以此時間作為 offset 嗎？",
+    "export_fix_decimal_question": "匯出時是否將所有音符時間取整毫秒？\n使用此功能匯出後的譜面再次匯入時將無法正常編輯。",
+    "export_fix_error_question": "是否對匯出的譜面進行誤差修正？\n此功能將在 $0 毫秒誤差範圍內對齊音符。",
+    "export_to_dym_question": "是否匯出 Dynamaker-modified 相關資訊？使用此選項匯出的譜面僅適用於進一步在編輯器中編輯。\n若選擇「是」，所有已設定的 Bar 資訊將由 DyNode 以預設方式覆蓋。",
+    "export_timing_error": "你尚未配置 Timing，無法匯出譜面。",
     "anno_simplify": "簡化模式",
     "default_width_mode_name_1": "寬度一致",
     "default_width_mode_name_2": "視覺一致",
-    "default_width_mode_name_3": "正側面分離",
+    "default_width_mode_name_3": "正面側面分離",
     "default_width_mode_name_4": "三面分離",
-    "default_width_mode": "寬度設置模式",
-    "anno_default_width": "設置默認寬度為",
-    "error_config_file_corrupted": "檢測到配置文件損壞。將還原所有的配置為默認值。",
-    "anno_reload_config": "配置已重載。一部分配置可能需要重啟遊戲來生效。",
-    "start_page_hint": "F7: 切换无边框全屏\nF12: 查看快捷键 / 在线文档\nDyNode目前仅支持1920x1080的渲染分辨率。",
-    "error_dym_note_load_failed": "導入譜面音符時出錯，導入過程已終止。\n建議使用最新版本的 Dynamaker-modified 來導出譜面，你也可以選擇向開發者反饋該錯誤。",
-    "error_dym_bpm_load_failed": "未能讀取譜面中的變 BPM 信息。\n建議使用最新版本的 Dynamaker-modified 來導出譜面的變 BPM 數據。",
-    "error_default_width_must_be_real": "輸入的默認寬度必須是一個實數。",
-    "undo": "撤銷操作 共 $0 處",
-    "redo": "還原操作 共 $0 處",
-    "tpc_extra_question": "檢測到你已經選擇一個 Note，它的時間是: $0 ms。要以這個時間作為 offset 嗎？",
-    "tpc_q1": "請輸入該 Timing Point 的 offset（毫秒）: ",
-    "tpc_q2": "請輸入 BPM : ",
-    "tpc_q3": "請輸入節拍（x/4）: ",
-    "add_timing_point": "添加 Timing Point 至時間 $0 處\nBPM: $1\n節拍: $2/4",
-    "remove_timing_point": "刪除位於時間 $0 處的 Timing Point\nBPM: $1\n節拍: $2/4",
-    "copy_timing_point": "複製末尾 Timing Point 至時間 $0 處\nBPM: $1\n節拍: $2/4",
-    "error_no_timing_point": "你沒有設置任何 Timing Point 。需按 Y 鍵放置至少一個 Timing Point 。",
-    "beatline_divs": "節拍細分:  1/$0\n節拍細分組: $1",
-    "warning_note_outbound": "你正在放置一個中心超出屏幕的音符。\n該音符可能在屏幕內不可見，並且之後將因此無法編輯。\n你可以使用撤銷來退回上一步操作。",
-    "copy_width": "複製寬度: $0",
-    "adjust_grid_y": "時間方向網格吸附",
-    "adjust_grid_x": "位置方向網格吸附",
+    "default_width_mode": "寬度設定模式",
+    "anno_default_width": "設定預設寬度為",
+    "error_config_file_corrupted": "偵測到設定檔損壞。將恢復所有設定為預設值。",
+    "anno_reload_config": "設定已重新載入。部分設定可能需要重啟遊戲才能生效。",
+    "start_page_hint": "F7：切換無邊框全螢幕\nF12：查看快捷鍵 / 線上文檔\nDyNode 目前僅支援 1920x1080 的渲染解析度。",
+    "error_dym_note_load_failed": "匯入譜面音符時出錯，匯入程序已終止。\n建議使用最新版本的 Dynamaker-modified 重新匯出譜面，或向開發者回報此錯誤。",
+    "error_dym_bpm_load_failed": "未能讀取譜面中的變 BPM 資訊。\n建議使用最新版本的 Dynamaker-modified 匯出譜面之變 BPM 資料。",
+    "error_default_width_must_be_real": "輸入的預設寬度必須為實數。",
+    "undo": "復原操作 $0",
+    "redo": "重做操作 $0",
+    "tpc_extra_question": "偵測到你已選擇一個音符，其時間為：$0 ms。要以此時間作為 offset 嗎？",
+    "tpc_q1": "請輸入該 Timing Point 的 offset（毫秒）：",
+    "tpc_q2": "請輸入 BPM：",
+    "tpc_q3": "請輸入節拍（x/4）：",
+    "add_timing_point": "新增 Timing Point 於時間 $0\nBPM：$1\n節拍：$2/4",
+    "remove_timing_point": "刪除位於時間 $0 的 Timing Point\nBPM：$1\n節拍：$2/4",
+    "copy_timing_point": "複製末尾 Timing Point 至時間 $0\nBPM：$1\n節拍：$2/4",
+    "error_no_timing_point": "你沒有設定任何 Timing Point。需按 Y 鍵放置至少一個 Timing Point。",
+    "beatline_divs": "節拍細分：1/$0\n節拍細分組：$1",
+    "warning_note_outbound": "你正在放置一個完全不可見於畫面內的音符，該音符日後可能無法被編輯。\n你可使用復原返回上一步操作。",
+    "copy_width": "寬度已複製：$0",
+    "adjust_grid_y": "時間方向格線吸附",
+    "adjust_grid_x": "位置方向格線吸附",
     "adjust_highlight": "時間/位置高亮顯示",
-    "notes_mirror": "鏡像音符共 $0 處",
-    "notes_mirror_copy": "鏡像複製音符共 $0 處",
-    "notes_rotate": "側面對稱音符共 $0 處",
-    "warning_notes_rotate": "僅側面音符能夠被對稱。",
-    "notes_rotate_copy": "側面對稱複製音符共 $0 處",
-    "warning_notes_rotate_copy": "僅側面音符能夠被對稱複製。",
-    "notes_set_width": "設置寬度：$0\n共 $1 處",
-    "notes_set_type": "設置類型：$0\n共 $1 處",
-    "copy_notes": "複製音符共 $0 處",
-    "cut_notes": "剪切音符共 $0 處",
+    "notes_mirror": "鏡像了共 $0 處音符",
+    "notes_mirror_copy": "鏡像並複製了共 $0 處音符",
+    "notes_rotate": "對側面音符進行對稱，共 $0 處",
+    "warning_notes_rotate": "僅側面音符可被對稱處理。",
+    "notes_rotate_copy": "對側面音符進行對稱複製，共 $0 處",
+    "warning_notes_rotate_copy": "僅側面音符可被對稱複製。",
+    "notes_set_width": "設定寬度為：$0\n共 $1 處",
+    "notes_set_type": "設定類型為：$0\n共 $1 處",
+    "copy_notes": "已複製 $0 處音符",
+    "cut_notes": "已剪下 $0 處音符",
     "anno_background_reset": "背景重設完成。",
-    "video_playback_error": "視頻播放出現錯誤。",
-    "video_playback_file_not_exists": "視頻文件不存在。\n[scale, 0.8]路徑: ",
-    "video_playback_open_timeout": "加載視頻文件超時。該視頻文件可能不受支持。",
-    "video_load_finished": "視頻加載完畢。",
-    "bar_calibration_question": "檢測到譜面沒有配置 Bar 。按照推薦的默認方式對譜面配置 Bar 嗎？",
-    "bar_calibration_warning": "檢測到譜麵包含多個 Timing Point 。\nDyNode 將以第一個 Timing Point 為準對 Bar 進行配置。\nDyNode 目前不支持變 BPM 的 Bar 配置。",
-    "bar_calibration_complete": "已按照默認方式配置 Bar: \nBar Per Minute: $0\nBar Offset: $1",
-    "bar_reset_question": "你已經對譜面設置了 Bar。要刪除 Bar 相關的配置嗎？",
-    "bar_reset_complete": "Bar 設置已清除。",
-    "beatline_style_default": "默认",
-    "beatline_style_mono": "单色",
-    "beatline_style_long": "等长",
-    "beatline_style_monolong": "经典",
-    "beatline_style": "拍线样式",
-    "extra_sub_fix": "检测到 $0 个未被引用的 SUB 音符。\n这些 SUB 音符已被删除。",
-    "expr_catch_error": "表达式执行错误。\n错误信息：$0\n错误表达式：$1",
-    "advanced_expr_error": "表达式在计算时出现错误，请检查表达式语法。批量操作已中止。",
-    "global_music_delay": "全局音乐延迟",
-    "credits": "Yet another Dynamix charting tool.\n\n[scale,1.2]by NagaseIori (NordLandeW)[scale,0.6]    [nord]\n\n[scale,1.2]繁体 / 英语翻译：Jmakxd[scale,0.6]    [jmak][/scale][/rainbow]\n\nDyNode 使用的大多数美术资源来自游戏 Dynamix ，由 C4Cat Entertainment Limited 制作。\n\nDyNode 以 MIT 许可协议进行许可。\n\nDyNode 使用 / 借鉴了以下项目的代码 / 资源 / 布局。\n\nScribble (under MIT License) Copyright (c) 2022 @jujuadams\n\nClean Shapes (under MIT License) Copyright (c) 2020 Juju Adams\n\nSNAP (under MIT License) Copyright (c) 2020 Juju Adams\n\nJSON (under MIT License) Copyright © 2013-2022 Niels Lohmann\n\ndelaunator-cpp (under MIT License) Copyright (c) 2018 Volodymyr Bilonenko\n\nFMODGMS (under BSD 2-Clause \"Simplified\" License) Copyright (c) 2016-2017, M.S.T.O.P.\n\nDynamaker-modifed (under MIT License) Copyright (c) 2021 jmakxd\n\nDynamaker (under MIT License) Copyright (c) 2019 omegaPi\n\nDynamix produced by C4Cat Entertainment Limited\n\nArcaea produced by lowiro limited\n",
-    "tab_main_volume": "音乐音量",
-    "tab_hitsound_volume": "打击音量",
+    "video_playback_error": "影片播放出現錯誤。",
+    "video_playback_file_not_exists": "影片檔不存在。\n[scale,0.8]路徑：",
+    "video_playback_open_timeout": "載入影片檔逾時。該影片可能不受支援。",
+    "video_load_finished": "影片載入完成。",
+    "bar_calibration_question": "偵測到譜面尚未配置 Bar。要以推薦的預設方式配置 Bar 嗎？",
+    "bar_calibration_warning": "偵測到譜面包含多個 Timing Point。\nDyNode 將以第一個 Timing Point 為準來配置 Bar。\nDyNode 目前不支援多 BPM 的 Bar 配置。",
+    "bar_calibration_complete": "已以預設方式配置 Bar：\nBar Per Minute：$0\nBar Offset：$1",
+    "bar_reset_question": "已對譜面設定了 Bar。要刪除所有 Bar 設定嗎？",
+    "bar_reset_complete": "Bar 設定已清除。",
+    "beatline_style_default": "預設",
+    "beatline_style_mono": "單色",
+    "beatline_style_long": "等長",
+    "beatline_style_monolong": "經典",
+    "beatline_style": "拍線樣式",
+    "extra_sub_fix": "偵測到 $0 個未被引用的 SUB 音符。\n這些 SUB 音符已被刪除。",
+    "expr_catch_error": "表達式執行錯誤。\n錯誤資訊：$0\n錯誤表達式：$1",
+    "advanced_expr_error": "計算表達式時出現錯誤，請檢查語法。批次操作已中止。",
+    "global_music_delay": "全域音樂延遲",
+    "credits": "Yet another Dynamix charting tool.\n\n[scale,1.2]by NagaseIori (NordLandeW)[scale,0.6]    [nord]\n\n[scale,1.2]繁體 / 英文翻譯：Jmakxd[scale,0.6]    [jmak][/scale][/rainbow]\n\nDyNode 使用的大部分美術資源來自 C4Cat Entertainment Limited 製作的遊戲 Dynamix。\n\nDyNode 以 MIT 許可協議授權。\n\nDyNode 使用 / 借鑒了以下專案的程式碼 / 資源 / 佈局：\n\nScribble (MIT License) Copyright (c) 2022 @jujuadams\n\nClean Shapes (MIT License) Copyright (c) 2020 Juju Adams\n\nSNAP (MIT License) Copyright (c) 2020 Juju Adams\n\nJSON (MIT License) © 2013-2022 Niels Lohmann\n\ndelaunator-cpp (MIT License) © 2018 Volodymyr Bilonenko\n\nFMODGMS (BSD 2-Clause) © 2016-2017, M.S.T.O.P.\n\nDynamaker-modified (MIT License) © 2021 jmakxd\n\nDynamaker (MIT License) © 2019 omegaPi\n\nDynamix 由 C4Cat Entertainment Limited 製作\n\nArcaea 由 lowiro limited 製作\n",
+    "tab_main_volume": "音樂音量",
+    "tab_hitsound_volume": "打擊音量",
     "tab_bg_dim": "背景亮度",
-    "tab_pitchshift": "禁用变调（实验性）",
-    "timing_point_change": "你正在修改位于 $0 ms 上的 Timing Point。请以 <offset>,<BPM>,<meter> 的形式来输入字符串进行修改。",
-    "timing_point_change_err": "Timing Point 修改出现错误。请确认你输入的字符串形式是合法的。",
-    "timing_point_change_success": "位于 $0 ms 上的 Timing Point 被修改为:\nBPM: $1 节拍: $2/4",
-    "timing_fix_question": "检测到修改该 Timing Point 将影响 $0ms 至 $1ms 上的 $2 个音符。是否尝试修正这些音符的时间到新的 BPM 上？",
-    "timing_fix_cross_warning": "检测到有音符在修正后进入了另一个 Timing Point 的区域内。\n如果修正的结果出现问题，你可以随时使用 Ctrl + Z 撤销此修正操作。"
+    "tab_pitchshift": "停用變調（實驗性）",
+    "timing_point_change": "你正在修改位於 $0 ms 的 Timing Point。請以 <offset>,<BPM>,<meter> 的格式輸入。",
+    "timing_point_change_err": "Timing Point 修改出現錯誤。請確認你輸入的格式正確。",
+    "timing_point_change_success": "位於 $0 ms 的 Timing Point 已修改為：\nBPM：$1 節拍：$2/4",
+    "timing_fix_question": "偵測到修改該 Timing Point 將影響 $0ms 至 $1ms 上的 $2 個音符。是否嘗試將這些音符校正至新的 BPM？",
+    "timing_fix_cross_warning": "偵測到有音符在校正後進入了另一個 Timing Point 的區間。\n若校正後出現問題，你可隨時使用 Ctrl+Z 復原此操作。",
+    "dym_old_version_warning": "DyNode 暫不支援匯入過舊版本的 Dynamaker 譜面。\n請使用最新版本的 Dynamaker 讀取該譜面並重新匯出後再嘗試匯入。",
+    "bad_xml_chart_format": "該 XML 譜面格式不受 DyNode 支援。DyNode 目前僅支援從最新版 Dynamaker 匯出的 XML 譜面。\n請檢查譜面格式後再重試匯入。",
+    "need_a_music_file_error": "建立專案需要一個音樂檔案。\n請至少選擇一個音樂檔案，或匯入包含音樂檔案的 .dy 譜面檔。",
+    "multiple_sides_selection_property_binding": "異側多選屬性繫結",
+    "ops_name_move": "移動音符",
+    "ops_name_add": "新增音符",
+    "ops_name_remove": "刪除音符",
+    "ops_name_tpadd": "新增 Timing Point",
+    "ops_name_tpchange": "修改 Timing Point",
+    "ops_name_tpremove": "刪除 Timing Point",
+    "ops_name_offset": "修改時間偏移量",
+    "ops_name_attach": "吸附 / 移動音符",
+    "ops_name_cut": "剪下音符",
+    "ops_name_mirror": "鏡像音符",
+    "ops_name_rotate": "對稱音符",
+    "ops_name_paste": "貼上音符",
+    "ops_name_settype": "修改音符類型",
+    "ops_name_setwidth": "修改音符寬度",
+    "ops_name_randomize": "隨機化譜面",
+    "ops_name_duplicate": "複製音符",
+    "ops_name_expr": "執行表達式",
+    "version_higher": "DyNode 已更新至版本 $0。",
+    "version_lower": "DyNode 已降級至版本 $0。\n回退至較舊版本可能會導致部分設定遺失，且可能無法正常讀取較新版本的譜面。",
+    "clear_all_notes": "已清除全部音符。"
   }
 }
